--- a/portfolio/public/manifest.json
+++ b/portfolio/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Alvaro Camacho",
-  "name": "Alvaro Camacho portfolio",
+  "name": "Alvaro Camacho Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,8 +18,9 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/?source=pwa",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#000000",
+  "orientation": "portrait"
 }
