--- a/portfolio/public/manifest.json
+++ b/portfolio/public/manifest.json
@@ -18,7 +18,8 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/?source=pwa",
+  "start_url": "/",
+  "scope":"/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#000000",
